old/quic-rpc-derive/tests/compile_fail/named_enum.stderr
error: Each variant must have exactly one unnamed field
 --> tests/compile_fail/named_enum.rs:5:5
  |
5 |     A { name: u8 },
  |     ^
